# report-agent

./: .env.example  .gitignore  ARCHITECTURE_SUMMARY.md  Makefile  README.md  SETUP_GUIDE.md  VERIFICATION_REPORT.md  alembic.ini  example_langgraph_approach.py  pyproject.toml  requirements.txt
.kiro/specs/investment-research-reports/: design.md  requirements.md  tasks.md
alembic/: env.py
docs/: architecture.md
examples/: langgraph_approach.py
refs/: github_repos.md
scripts/: quick_verify.py  verify_apis.py
src/: __init__.py
src/investment_research/: __init__.py  main.py
src/investment_research/agents/: __init__.py  base.py  financial_agent.py  industry_agent.py  market_agent.py  risk_agent.py
src/investment_research/api/: auth.py  dependencies.py  main.py  models.py
src/investment_research/config/: __init__.py  settings.py
src/investment_research/core/: __init__.py  database.py  langchain_setup.py  models.py  siliconcloud_llm.py  state.py  task_coordinator.py  tool_executor.py  workflow.py  workflow_manager.py
src/investment_research/services/: __init__.py  audit_service.py  citation_manager.py  compliance_service.py  configuration_manager.py  content_aggregator.py  data_standardization.py  error_handler.py  mcp_search.py  quality_controller.py  rag_service.py  report_template_engine.py  system_monitor.py  tool_manager.py  update_scheduler.py
tests/: __init__.py  conftest.py  test_integration.py  test_rag_service.py
