[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "investment-research-reports"
version = "0.1.0"
description = "AI-powered investment research report generation system"
authors = [{name = "Investment Research Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.13",
    "langchain-core>=0.1.10",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "aiomysql>=0.2.0",
    "pymysql>=1.1.0",
    "fastapi>=0.108.0",
    "uvicorn>=0.25.0",
    "pydantic>=2.5.3",
    "pandas>=2.1.4",
    "numpy>=1.26.2",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.1.0",
    "structlog>=23.2.0",
    "httpx>=0.26.0",
    "aiohttp>=3.9.1",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.2",
    "hypothesis>=6.92.1",
    "black>=23.12.0",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"